crates/fe/tests/fixtures/cli_output/workspaces/dependency_scope/dependency_in_scope_file_path_standalone.snap
---
source: crates/fe/tests/cli_output.rs
assertion_line: 947
expression: output
input_file: tests/fixtures/cli_output/workspaces/dependency_scope/dependency_in_scope_file_path_standalone.case
---
=== STDERR ===
errors in file://<project>/crates/fe/tests/fixtures/cli_output/workspaces/dependency_scope/ingots/app/src/lib.fe

error[2-0002]: `lib` is not found
  ┌─ lib.fe:1:5
  │
1 │ use lib::foo
  │     ^^^ `lib` is not found

error[8-0012]: undefined variable
   ┌─ lib.fe:11:13
   │
11 │             foo()
   │             ^^^ undefined variable `foo`


=== EXIT CODE: 1 ===
